- Exporting contact as vcard now sets it's address type as home instead of work.
- Projects2: New csv export of time entries.

05-03-2014 5.0.45
- CalDAV will update and delete the correct event when events are imported and exported with the same URI
- Fixed rename(move files/folders) functionality (move files/folders did not work properly)
- Tickets: Fixed dependency problem with loading the tickettypes dialog when the email module is not installed.
- Tickets: Fixed searching for default type when loading a new ticket. Now it also checks if the user has create permission for the type.
- Billing: Fixed bug in the selection (date range) of expense items when exporting them.
- Projects2: Search for employees and resources works now
- Corrected key event for auto capitalize. It didn't work in Firefox.
- Files & Email: option to automatically delete expired download links.
- Holidays: possible to delete an employee's entire year record.
- Holidays: when registering new holiday, show hours in national holidays.
- Projects2: Default icon in the absence of an icon in the subprojects grid.
- Projects2: Columns are sortable in sub projects grid.
- Projects2: reports didn't include last day of period
- Projects2: New project shows available tempaltes sorted by name 

18-02-2014 5.0.44
- Fixed bug in custom fields copying from projects1 to projects2.
- Improved project reporting.
- Show time tracking comments in hours approval 2.
- Timer bug used end time as start time
- Undismissable reminders bug with recurring events
- ActiveSync: Don't enter meeting data if there's no organizer
- Fixed task recurring bug that didn't work for tasks in the future

17-02-2014 5.0.43
- Schedule Call Dialog: Fixed permission problem.
- Billing: Fixed break as last item inside itemGroups when printing PDF
- Calendar: Print Category Count - Only print count for items that are visible for the user.
- Group-office theme: Added strong/b style for fixing bold text inside blockquotes